made ui improvements

--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
 </head>
 <body>
   <div class="text-layer" id="textLayer">PROJECTS</div>
+    
   <div class="cards-wrapper" id="cardsWrapper">
-    <div class="cards" id="card1"></div>
-    <div class="cards" id="card2"></div>
-    <div class="cards" id="card3"></div>
-    <div class="cards" id="card4"></div> 
+    <div class="cards" id="card1">
+      <div class="cardInfo">Projects</div>
+    </div>
+    <div class="cards" id="card2">
+      <div class="cardInfo">About</div>
+    </div>
+    <div class="cards" id="card3">
+      <div class="cardInfo">Blog</div>
+    </div>
+    <div class="cards" id="card4">
+      <div class="cardInfo">Contact</div>
+    </div> 
   </div>
 
   <!-- 
@@ -24,6 +33,24 @@
   - Contact page (with a form)
   -->
 
+
+
+<!-- Projects page -->
+  <section id="projects">
+    <!-- Simple Project page with blog-like content -->
+    <div class="project">
+      <h2 class="project-title"> Demo Filler text </h2>
+      <p class="project-description"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe quis adipisci rem nesciunt, illum illo vero omnis optio odit provident nisi quae nam similique labore quos tempora eveniet deleniti eos! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates repellat deserunt magnam accusamus assumenda! Magnam rem praesentium voluptates animi illo adipisci, harum mollitia obcaecati at expedita necessitatibus accusamus reiciendis quisquam.
+      Totam eaque, exercitationem ea esse quae expedita earum mollitia praesentium? Nesciunt beatae quo nostrum labore cumque consectetur ipsa doloremque deserunt, impedit ut numquam harum cupiditate sint, magni sapiente fuga in.
+      Quibusdam facilis itaque, quo optio ducimus ipsam soluta ad nobis possimus voluptas quis consectetur accusamus temporibus eligendi fugit qui deleniti inventore! Dolor ratione molestiae assumenda similique eveniet quo quidem animi! <br> <br>
+      Magnam, fugiat nihil et, a quos, quisquam assumenda enim ad explicabo delectus vero! Enim hic fugiat, nam maxime, fugit cupiditate veniam quibusdam quam nisi, deserunt expedita. Asperiores atque cumque eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quis temporibus accusantium iusto quae placeat reiciendis ducimus iure nesciunt officia? Aspernatur suscipit nobis hic eveniet unde quisquam doloremque temporibus dolores.
+      Laborum amet laboriosam quia deleniti architecto deserunt minima dolore eius. Voluptas sed saepe dolores ducimus voluptates, quisquam voluptatum ea numquam suscipit quis, ipsa sit veritatis qui temporibus! Ipsa, placeat dignissimos.
+      Accusamus ex libero fuga optio inventore. Aperiam necessitatibus cupiditate quisquam. Quos quasi dolorum facere velit reprehenderit earum consequatur, itaque deserunt, totam, labore aspernatur necessitatibus sequi accusantium praesentium modi perspiciatis dolorem.<br> <br>
+      Facilis provident ducimus cumque laborum veniam delectus recusandae iste officiis, maxime obcaecati dolore asperiores doloremque? In officia doloremque ad incidunt vel sequi! Temporibus magnam expedita blanditiis culpa consequatur quo? Amet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi consequatur, commodi molestias rerum iure minima nobis reprehenderit, suscipit doloremque dicta illo! Ex molestias dicta ut nihil rem. Labore, nam impedit!
+      Ex quae, veritatis velit laborum, repellat, modi cumque fugit quaerat minima nemo unde. Harum explicabo, laborum recusandae quibusdam laboriosam quidem inventore voluptas corrupti sapiente dignissimos quia soluta iste adipisci? Eius!
+      Reprehenderit nihil quia perferendis, officia veritatis recusandae quo praesentium a quidem blanditiis unde cupiditate velit ipsum totam. Pariatur minus maxime adipisci alias natus architecto magni fugit, harum rem, quo iste?<br> <br>
+    </p>
+  </section>
   <script src="index.js"></script>
 </body>
 </html>
