--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon">
   <title>Document</title>
 </head>
 <body>
   <div class="text-layer" id="textLayer">PROJECTS</div>
-    
   <div class="cards-wrapper" id="cardsWrapper">
     <div class="cards" id="card1">
       <div class="cardInfo">Projects</div>
